<resources>
    <string name="app_name">PasswNote</string>
    <string name="btnPassword">Generate Password</string>
    <string name="allowChar">Allow Characters</string>
    <string name="allowNum">Allow Numbers</string>
    <string name="allowSpecialChar">Allow Special Characters</string>
    <string name="lblEnterPassword">Password Length</string>
    <string name="lblEnterPasswordFirst" translatable="false">Select Password Length (Default Length : 8)</string>
    <string name="infoDefaultLength">Default length is 32</string>
    <string name="lblHideResult">Your password will be here, click the Generate Password button</string>
    <string name="lblPasswordHere">Your random password↓</string>
    <string name="infoCopiedText">Your password has just been copied to clipboard</string>
    <string name="infoDigitLess">Your password cannot be less then 4 digits</string>
    <string name="infoDigitMore">Your password cannot be more then 10.000 digits</string>
    <string name="infoRadioButton">Please select at least one option</string>
    <string name="homeButton">Home</string>
    <string name="savedButton">Saved</string>
    <string name="passwordTitle">Title:</string>
    <string name="passwordContent">Password:</string>
    <string name="saveText">Save</string>
    <string name="cancelText">Cancel</string>
    <string name="editMenuTitle">Edit Menu</string>
    <string name="enterTitle">Enter password title</string>
    <string name="editProfileText">Edit Profile</string>
    <string name="userStatus">Premium User</string>
    <string name="logoutText">Log Out</string>
    <string name="savedText">Saved Passwords</string>
    <string name="addPasswordText">Add Password</string>
    <string name="settingsText">Settings</string>
    <string name="deleteWarningText">Are you sure?</string>
    <string name="deleteMessageText">will be deleted!</string>
    <string name="deleteText">DELETE</string>
    <string name="deleteActionWarningText">This action cannot be undone!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sync_text"><u>Synchronization</u></string>

    <!--String resources for delete dialog-->
    <string name="checkMessage">Are you sure ?</string>
    <string name="delete_prompt">will be deleted..</string>
    <string name="delete_icon_text">Delete</string>
    <string name="cancel_icon_text">Cancel</string>
    <string name="warning_about_delete_action">This action cannot be undone !</string>
</resources>