<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/delete_dialog"
    android:orientation="vertical"
    android:background="@drawable/round_section_rectangle_light_theme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/checkMessage"
        android:textColor="@color/main_text_color"
        android:textSize="25sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/delete_warning_text"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/delete_prompt"
        android:textColor="@color/main_text_color"
        android:textSize="20sp">

    </TextView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <!-- Delete Button -->
        <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete_icon_text"
            android:background="@drawable/bg_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Boşluk -->
        <Space
            android:id="@+id/space"
            android:layout_width="100dp"
            android:layout_height="0dp"/>

        <!-- Second Button -->
        <Button
            android:id="@+id/cancelButton"
            android:background="@drawable/bg_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_icon_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/warning_about_delete_action"
        android:textColor="#DC1708"
        android:textSize="18sp"/>



</androidx.appcompat.widget.LinearLayoutCompat>