<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/third_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="10dp">

        <Switch
            android:id="@+id/character_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_section_rectangle_light_theme"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/allowChar"
            android:textColor="@color/first_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:theme="@style/nightModeSwitch"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="205dp"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>

        <Switch
            android:id="@+id/number_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_section_rectangle_light_theme"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/allowNum"
            android:textColor="@color/first_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:theme="@style/nightModeSwitch"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="133dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/special_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_section_rectangle_light_theme"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/allowSpecialChar"
            android:textColor="@color/first_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:theme="@style/nightModeSwitch"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="266dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:clickable="false"
            android:editable="false"
            android:padding="10dp"
            android:text="@string/lblEnterPassword"
            android:textAlignment="center"
            android:textColor="@color/first_blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--Deprecated Feature
        <EditText
            android:id="@+id/pw_lenght"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/title_background"
            android:hint="@string/infoDefaultLength"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#F6F6F6"
            android:textColorHint="#F6F6F6"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="337dp" />

                                        -->

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="4"
            android:max="32"
            android:progress="4"
            android:progressBackgroundTint="@color/first_blue"
            android:progressTint="@color/second_blue"
            android:thumbTint="@color/first_blue"/>


        <Button
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:background="@drawable/button_light"
            android:onClick="generate"
            android:padding="10dp"
            android:text="@string/btnPassword"
            android:textColor="@color/first_blue"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="400dp" />


        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_section_rectangle_light_theme"
            android:gravity="center"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/first_blue"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="458dp"
            android:visibility=""/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_light"
            android:padding="10dp"
            android:text="Save"
            android:textColor="@color/first_blue"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="400dp" />

    </LinearLayout>
</FrameLayout>